improved fetching of news from admin dashboard

--- a/news.html
+++ b/news.html
@@ -44,6 +44,8 @@
             });
         }
     </script>
+    <script src="js/utils.js"></script>
+
     <script src="js/news.js"></script>
 </body>
 
