--- a/admin.html
+++ b/admin.html
@@ -123,6 +123,7 @@
             </div>
         </div>
     </div>
+    <script src="js/utils.js"></script>
 
     <script src="js/admin.js"></script>
 </body>
