--- a/news.html
+++ b/news.html
@@ -5,62 +5,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Stay updated with the latest news and events about visa, travel, and education insights">
     <title>Latest News & Events</title>
-    
-    <!-- Styles -->
     <link rel="stylesheet" href="style/news.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
-    
-    <!-- Netlify Identity Widget -->
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js" defer></script>
 </head>
 <body>
     <section id="news-events" class="news-events-section">
         <div class="container">
-            <div class="section-header" data-aos="fade-up">
-                <h2>Latest News & Events</h2>
-                <p>Stay updated with the latest visa, travel, and education insights</p>
-                <div class="section-filters">
-                    <button class="filter-btn active" data-category="all">All</button>
-                    <button class="filter-btn" data-category="visa">Visa</button>
-                    <button class="filter-btn" data-category="education">Education</button>
-                    <button class="filter-btn" data-category="travel">Travel</button>
-                </div>
+            <!-- News Filter Buttons -->
+            <div class="section-filters">
+                <button class="filter-btn active" data-category="all">All</button>
+                <button class="filter-btn" data-category="visa">Visa</button>
+                <button class="filter-btn" data-category="education">Education</button>
+                <button class="filter-btn" data-category="travel">Travel</button>
             </div>
-
             <!-- Loading Spinner -->
-            <div class="loading-spinner">
+            <div class="loading-spinner hidden">
                 <div class="spinner"></div>
             </div>
-
-            <!-- News Container -->
-            <div id="newsContainer" class="news-grid">
-                <!-- News cards will be dynamically populated here -->
-            </div>
-
-            <!-- Empty State -->
+            <!-- News Content Container -->
+            <div id="newsContainer" class="news-grid"></div>
+            <!-- Empty and Error States -->
             <div class="empty-state hidden">
-                <i class="fas fa-newspaper"></i>
                 <p>No news items available at the moment.</p>
             </div>
-
-            <!-- Error State -->
             <div class="error-state hidden">
-                <i class="fas fa-exclamation-circle"></i>
                 <p>Unable to load news items. Please try again later.</p>
                 <button class="retry-btn">Retry</button>
             </div>
-
-            <div class="news-cta" data-aos="fade-up">
-                <a href="news.html" class="view-all-btn">
-                    <span>View All News</span>
-                    <i class="fas fa-arrow-right"></i>
-                </a>
+            <!-- Admin News List Placeholder -->
+            <div id="newsList" class="hidden">
+                <!-- Admin-specific news list items will be populated here if necessary -->
             </div>
         </div>
+        <!-- Call-to-Action Button -->
+        <div class="news-cta" data-aos="fade-up">
+            <a href="news.html" class="view-all-btn">
+                <span>View All News</span>
+                <i class="fas fa-arrow-right"></i>
+            </a>
+        </div>
     </section>
-
-    <!-- Scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
     <script src="js/utils.js"></script>
     <script src="js/news.js"></script>
@@ -70,17 +56,6 @@
             once: true,
             offset: 100
         });
-
-        // Netlify Identity
-        if (window.netlifyIdentity) {
-            window.netlifyIdentity.on("init", user => {
-                if (!user) {
-                    window.netlifyIdentity.on("login", () => {
-                        document.location.href = "/admin/";
-                    });
-                }
-            });
-        }
     </script>
 </body>
 </html>
