--- a/news.html
+++ b/news.html
@@ -1,61 +1,22 @@
+<!-- news.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Stay updated with the latest news and events about visa, travel, and education insights">
-    <title>Latest News & Events</title>
-    <link rel="stylesheet" href="style/news.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
-    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js" defer></script>
+    <title>News & Events</title>
+    <link rel="stylesheet" href="style/news.css"> <!-- Optional: Include your CSS file -->
 </head>
 <body>
-    <section id="news-events" class="news-events-section">
-        <div class="container">
-            <!-- News Filter Buttons -->
-            <div class="section-filters">
-                <button class="filter-btn active" data-category="all">All</button>
-                <button class="filter-btn" data-category="visa">Visa</button>
-                <button class="filter-btn" data-category="education">Education</button>
-                <button class="filter-btn" data-category="travel">Travel</button>
-            </div>
-            <!-- Loading Spinner -->
-            <div class="loading-spinner hidden">
-                <div class="spinner"></div>
-            </div>
-            <!-- News Content Container -->
-            <div id="newsContainer" class="news-grid"></div>
-            <!-- Empty and Error States -->
-            <div class="empty-state hidden">
-                <p>No news items available at the moment.</p>
-            </div>
-            <div class="error-state hidden">
-                <p>Unable to load news items. Please try again later.</p>
-                <button class="retry-btn">Retry</button>
-            </div>
-            <!-- Admin News List Placeholder -->
-            <div id="newsList" class="hidden">
-                <!-- Admin-specific news list items will be populated here if necessary -->
-            </div>
-        </div>
-        <!-- Call-to-Action Button -->
-        <div class="news-cta" data-aos="fade-up">
-            <a href="news.html" class="view-all-btn">
-                <span>View All News</span>
-                <i class="fas fa-arrow-right"></i>
-            </a>
-        </div>
+
+    <header>
+        <h1>Latest News & Events</h1>
+    </header>
+
+    <section id="news-container">
+        <!-- News articles will be loaded here by JS -->
     </section>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
-    <script src="js/utils.js"></script>
-    <script src="js/news.js"></script>
-    <script>
-        AOS.init({
-            duration: 800,
-            once: true,
-            offset: 100
-        });
-    </script>
+
+    <script src="js/news.js"></script> <!-- Include the JS file to fetch and display news -->
 </body>
 </html>
