--- a/home.html
+++ b/home.html
@@ -8,6 +8,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     <link rel="stylesheet" href="style/home.css">
+    <link rel="preload" href="/assets/image.png" as="image">
 </head>
 
 <!-- Chat Toggle Button -->
