--- a/home.html
+++ b/home.html
@@ -80,7 +80,7 @@
                         <a href="#">Work Visas</a>
                         <a href="#">Pilgrimage Visas</a>
                     </div>
-                    
+
 
                 </div>
                 <a href="news.html">News & Events</a>
@@ -306,9 +306,12 @@
         <div class="footer-content">
             <div class="footer-section">
                 <h4>Contact Us</h4>
-                <p>Email: huznigaranegmail.com</p>
+                <p>Email: huznigarane@gmail.com</p>
+                <p>Email: huznigarane@gmail.com</p>
                 <p>WhatsApp: +254 725 996 394</p>
+                <p>WhatsApp: +254 717 417 326</p>
                 <p>Phone: +254725996394</p>
+                <p>Phone: +254717417326</p>
             </div>
             <div class="footer-section">
                 <h4>Quick Links</h4>
@@ -321,7 +324,7 @@
                 <h4>Follow Us</h4>
                 <p><a href="#">Facebook</a></p>
                 <p><a href="#">Twitter</a></p>
-                <p><a href="#">LinkedIn</a></p>
+                <p><a href="#">Instagram</p>
             </div>
         </div>
     </footer>
