--- a/home.html
+++ b/home.html
@@ -59,7 +59,7 @@
     <!-- Navigation -->
     <nav>
         <div class="nav-container">
-            <div class="logo">TawheedVisaAgency</div>
+            <div class="logo">TawheedGLobal</div>
             <button id="themeToggle" class="theme-toggle">
                 <i class="fas fa-moon dark-icon"></i>
                 <i class="fas fa-sun light-icon"></i>
