made the link to work in news section

--- a/studyAbroad.html
+++ b/studyAbroad.html
@@ -17,7 +17,7 @@
             </div>
             <button class="menu-toggle" id="menu-toggle">☰</button>
             <ul class="nav-links" id="nav-links">
-                <li><a href="#home">Home</a></li>
+                <li><a href="home.html">Home</a></li>
                 <li><a href="#destinations">Study Destinations</a></li>
                 <li><a href="#services">Services</a></li>
                 <li><a href="#about">About Us</a></li>
@@ -151,7 +151,7 @@
 
             <div class="contact-options">
                 <button type="submit" class="submit-button">Send Message</button>
-                <a href="https://wa.me/+254725996394" class="whatsapp-button">
+                <a href="https://wa.me/+254717417326" class="whatsapp-button">
                     <i class="icon-whatsapp"></i> Contact via WhatsApp
                 </a>
             </div>
@@ -165,12 +165,13 @@
         <div class="footer-content">
             <div class="footer-section">
                 <h3>Contact Info</h3>
-                <p>Email: info@globalstudyhub.com</p>
-                <p>Phone: +1 234 567 8900</p>
+                <p>Email: abdul.hudh@gmail.com</p>
+                <p>Phone: 254717417326</p>
+               
                 <p>Address: 123 Education Street, City</p>
             </div>
             <div class="footer-section">
-                <h3>Quick Links</h3>
+                <h3>Quick Links</h3> 
                 <ul>
                     <li><a href="#home">Home</a></li>
                     <li><a href="#destinations">Destinations</a></li>
