chatbot name modified

--- a/chatbot.html
+++ b/chatbot.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Visa Assistant Chatbot</title>
+    <title>TawheedGLobal Chatbot</title>
     <link rel="stylesheet" href="style/chatbot.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
@@ -19,7 +19,7 @@
         <div class="chatbot-header">
             <div class="header-content">
                 <i class="fas fa-robot"></i>
-                <h2>Visa Assistant</h2>
+                <h2>TawheedGlobal</h2>
             </div>
             <div class="header-actions">
                 <button id="minimizeChat" class="action-btn">
