--- a/home.html
+++ b/home.html
@@ -306,7 +306,9 @@
         <div class="footer-content">
             <div class="footer-section">
                 <h4>Contact Us</h4>
+                <p>Email: abdul.hudh@gmail.com</p>
                 <p>Email: huznigarane@gmail.com</p>
+                
                 
                 <p>WhatsApp: +254 725 996 394</p>
                 <p>WhatsApp: +254 717 417 326</p>
