--- a/studyAbroad.html
+++ b/studyAbroad.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Global Study Hub - Your Gateway to International Education</title>
     <link rel="stylesheet" href="style/studyAbroad.css">
+   
+    <link rel="preload" href="assets/studyabroad.png" as="image">
+   
+    
 </head>
 
 <body>
