improved hero page of website by making cards interactive

--- a/home.html
+++ b/home.html
@@ -99,29 +99,55 @@
     </section>
 
     <!-- Services Grid -->
-    <div class="services">
-        <div class="service-card">
-            <i class="fas fa-globe"></i>
-            <h3>Visit Visas</h3>
-            <p>Tourist and business visit visas for multiple countries</p>
-        </div>
-        <div class="service-card">
-            <i class="fas fa-graduation-cap"></i>
-            <h3>Student Visas</h3>
-            <p>Study abroad with our comprehensive student visa services</p>
-        </div>
-        <div class="service-card">
-            <i class="fas fa-briefcase"></i>
-            <h3>Work Visas</h3>
-            <p>Professional work visa assistance for global careers</p>
-        </div>
-        <div class="service-card">
-            <i class="fas fa-heart"></i>
-            <h3>Pilgrimage Visas</h3>
-            <p>Specialized assistance for Hajj and Umrah visas</p>
+     <!-- Services Section -->
+<section class="services-section">
+    <div class="container">
+        <h2 class="section-title">Our Visa Services</h2>
+        <div class="services">
+            <div class="service-card" data-service="visit-visas">
+                <i class="fas fa-globe"></i>
+                <h3>Visit Visas</h3>
+                <p>Tourist and business visit visas for multiple countries</p>
+            </div>
+            <div class="service-card" data-service="student-visas">
+                <i class="fas fa-graduation-cap"></i>
+                <h3>Student Visas</h3>
+                <p>Study abroad with our comprehensive student visa services</p>
+            </div>
+            <div class="service-card" data-service="work-visas">
+                <i class="fas fa-briefcase"></i>
+                <h3>Work Visas</h3>
+                <p>Professional work visa assistance for global careers</p>
+            </div>
+            <div class="service-card" data-service="pilgrimage-visas">
+                <i class="fas fa-heart"></i>
+                <h3>Pilgrimage Visas</h3>
+                <p>Specialized assistance for Hajj and Umrah visas</p>
+            </div>
         </div>
     </div>
+</section>
 
+<!-- Service Detail Overlay -->
+<div class="service-detail-overlay">
+    <div class="service-detail-content">
+        <span class="close-btn">&times;</span>
+        <h2 id="service-title">Service Details</h2>
+        <div id="service-description"></div>
+        <div class="contact-info">
+            <h3>Contact Us</h3>
+            <div class="contact-links">
+                <a href="mailto:info@tawheedglobal.com" class="contact-link">
+                    <i class="fas fa-envelope"></i> info@tawheedglobal.com
+                </a>
+                <a href="https://wa.me/254717417326" target="_blank" class="contact-link">
+                    <i class="fab fa-whatsapp"></i> +254 717 417 326
+                </a>
+            </div>
+        </div>
+    </div>
+</div>
+  
     <!-- Visa Readiness Score Feature -->
 
     <div class="visa-readiness-checker">
