--- a/home.html
+++ b/home.html
@@ -26,6 +26,13 @@
         <link rel="stylesheet" href="style/home.css">
         <link rel="preload" href="/assets/image.png" as="image">
 </head>
+<header>
+    <div class="social-links">
+        <a href="https://www.facebook.com/profile.php?id=61570636203778" target="_blank">Facebook</a> |
+        <a href="https://x.com/tawheedglobal?s=09" target="_blank">X (Twitter)</a>
+    </div>
+</header>
+
 
 <!-- Chat Toggle Button -->
 <button id="chatToggle" class="chat-toggle">
@@ -75,7 +82,7 @@
     <!-- Navigation -->
     <nav>
         <div class="nav-container">
-            <div class="logo">TawheedGLobal</div>
+            <div class="logo">TawheedGlobal</div>
             <button id="themeToggle" class="theme-toggle">
                 <i class="fas fa-moon dark-icon"></i>
                 <i class="fas fa-sun light-icon"></i>
@@ -84,7 +91,7 @@
                 <i class="fas fa-bars"></i>
             </button>
             <div class="nav-links" id="navLinks">
-                <a href="#">Home</a>
+                <a href="placement.html">Job Placements</a>
                 <a href="#about">About Us</a>
                 <a href="studyAbroad.html">Study Abroad</a>
 
@@ -102,6 +109,18 @@
                 <a href="news.html">News & Events</a>
                 <a href="#" onclick="showOthersDialog()"></a>
                 <a href="#start-visa-journey">Contact Us</a>
+
+                <div class="dropdown">
+                    <a href="#">Travel Services ▾</a>
+                    <div class="dropdown-content">
+                        <a href="#">Air Ticketing</a>
+                        <a href="#">Travel insurance</a>
+                        <a href="#">Medical tourism</a>
+                        <a href="#">Tours</a>
+                        <a href="#">Hotels & Accomodation</a>
+                    </div>
+                </div>
+                
             </div>
         </div>
     </nav>
