--- a/example.html
+++ b/example.html
@@ -3,477 +3,78 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TawheedGlobal - Kenya-Germany Job Portal</title>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/lucide/0.263.1/lucide.min.css" rel="stylesheet">
+    <title>About Section Redesign</title>
+    <link rel="stylesheet" href="styles.css">
     <style>
-        :root {
-            --primary: #2563eb;
-            --primary-dark: #1d4ed8;
-            --gray-50: #f9fafb;
-            --gray-100: #f3f4f6;
-            --gray-200: #e5e7eb;
-            --gray-600: #4b5563;
-            --gray-700: #374151;
-            --gray-800: #1f2937;
-            --gray-900: #111827;
-        }
-
-        * {
+        body {
+            font-family: 'Poppins', sans-serif;
             margin: 0;
             padding: 0;
-            box-sizing: border-box;
+            background: #f9f9f9;
+            color: #333;
         }
-
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-            line-height: 1.6;
-            color: var(--gray-800);
-        }
-
-        .container {
-            width: 100%;
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 0 1rem;
-        }
-
-        /* Navigation */
-        .navbar {
-            background: white;
-            box-shadow: 0 1px 3px rgba(0,0,0,0.1);
-            position: fixed;
-            width: 100%;
-            top: 0;
-            z-index: 1000;
-        }
-
-        .nav-content {
+        .about-section {
             display: flex;
-            justify-content: space-between;
             align-items: center;
-            height: 4rem;
+            justify-content: center;
+            padding: 100px 50px;
+            gap: 50px;
         }
-
-        .nav-brand {
-            font-size: 1.5rem;
-            font-weight: bold;
-            color: var(--primary);
+        .about-text {
+            max-width: 600px;
         }
-
-        .nav-links {
-            display: none;
-            list-style: none;
-        }
-
-        .nav-links a {
-            color: var(--gray-600);
-            text-decoration: none;
-            padding: 0.5rem 1rem;
-            transition: color 0.3s;
-        }
-
-        .nav-links a:hover {
-            color: var(--primary);
-        }
-
-        .mobile-menu-btn {
-            display: block;
-            background: none;
-            border: none;
-            padding: 0.5rem;
-            cursor: pointer;
-        }
-
-        .mobile-menu-btn i {
-            font-size: 1.5rem;
-            color: var(--gray-600);
-        }
-
-        .mobile-menu {
-            display: none;
-            position: absolute;
-            top: 4rem;
-            left: 0;
-            right: 0;
-            background: white;
-            padding: 1rem;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-        }
-
-        .mobile-menu.active {
-            display: block;
-        }
-
-        .mobile-menu a {
-            display: block;
-            padding: 0.75rem 1rem;
-            color: var(--gray-600);
-            text-decoration: none;
-            transition: background-color 0.3s;
-        }
-
-        .mobile-menu a:hover {
-            background-color: var(--gray-50);
-            color: var(--primary);
-        }
-
-        /* Hero Section */
-        .hero {
-            padding: 8rem 1rem 4rem;
-            background: linear-gradient(to bottom right, #eef2ff, white);
-            text-align: center;
-        }
-
-        .hero h1 {
+        .about-text h1 {
             font-size: 2.5rem;
-            color: var(--gray-900);
-            margin-bottom: 1.5rem;
-            line-height: 1.2;
+            margin-bottom: 20px;
+            color: #222;
         }
-
-        .hero p {
-            font-size: 1.25rem;
-            color: var(--gray-600);
-            margin-bottom: 2rem;
+        .about-text p {
+            font-size: 1.1rem;
+            line-height: 1.8;
         }
-
-        .btn {
+        .about-image img {
+            border-radius: 20px;
+            width: 400px;
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+        }
+        .button {
             display: inline-block;
-            padding: 0.75rem 1.5rem;
-            border-radius: 0.5rem;
+            margin-top: 20px;
+            padding: 10px 20px;
+            background: #007bff;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
             text-decoration: none;
-            font-weight: 500;
-            transition: all 0.3s;
+            transition: background 0.3s ease;
         }
-
-        .btn-primary {
-            background: var(--primary);
-            color: white;
+        .button:hover {
+            background: #0056b3;
         }
-
-        .btn-primary:hover {
-            background: var(--primary-dark);
-        }
-
-        .btn-secondary {
-            border: 2px solid var(--primary);
-            color: var(--primary);
-        }
-
-        .btn-secondary:hover {
-            background: var(--gray-50);
-        }
-
-        /* Services Section */
-        .services {
-            padding: 4rem 1rem;
-            background: white;
-        }
-
-        .section-title {
-            text-align: center;
-            margin-bottom: 3rem;
-        }
-
-        .section-title h2 {
-            font-size: 2rem;
-            color: var(--gray-900);
-            margin-bottom: 1rem;
-        }
-
-        .section-title p {
-            color: var(--gray-600);
-            font-size: 1.125rem;
-        }
-
-        .services-grid {
-            display: grid;
-            grid-template-columns: 1fr;
-            gap: 2rem;
-            margin-top: 2rem;
-        }
-
-        .service-card {
-            background: var(--gray-50);
-            padding: 2rem;
-            border-radius: 1rem;
-            transition: transform 0.3s, box-shadow 0.3s;
-        }
-
-        .service-card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 10px 20px rgba(0,0,0,0.1);
-        }
-
-        .service-card i {
-            font-size: 2.5rem;
-            color: var(--primary);
-            margin-bottom: 1rem;
-        }
-
-        /* Contact Section */
-        .contact {
-            padding: 4rem 1rem;
-            background: var(--gray-50);
-        }
-
-        .contact-grid {
-            display: grid;
-            grid-template-columns: 1fr;
-            gap: 2rem;
-        }
-
-        .contact-info {
-            background: white;
-            padding: 2rem;
-            border-radius: 1rem;
-        }
-
-        .contact-form {
-            background: white;
-            padding: 2rem;
-            border-radius: 1rem;
-        }
-
-        .form-group {
-            margin-bottom: 1.5rem;
-        }
-
-        .form-group label {
-            display: block;
-            margin-bottom: 0.5rem;
-            color: var(--gray-700);
-        }
-
-        .form-group input,
-        .form-group textarea {
-            width: 100%;
-            padding: 0.75rem;
-            border: 1px solid var(--gray-200);
-            border-radius: 0.5rem;
-            transition: border-color 0.3s;
-        }
-
-        .form-group input:focus,
-        .form-group textarea:focus {
-            outline: none;
-            border-color: var(--primary);
-        }
-
-        /* Footer */
-        .footer {
-            background: var(--gray-900);
-            color: white;
-            padding: 4rem 1rem 2rem;
-        }
-
-        .footer-grid {
-            display: grid;
-            grid-template-columns: 1fr;
-            gap: 2rem;
-            margin-bottom: 2rem;
-        }
-
-        .footer-links h4 {
-            margin-bottom: 1rem;
-        }
-
-        .footer-links a {
-            color: var(--gray-200);
-            text-decoration: none;
-            transition: color 0.3s;
-        }
-
-        .footer-links a:hover {
-            color: white;
-        }
-
-        .footer-bottom {
-            border-top: 1px solid var(--gray-800);
-            padding-top: 2rem;
-            text-align: center;
-            color: var(--gray-200);
-        }
-
-        /* Responsive Design */
-        @media (min-width: 768px) {
-            .nav-links {
-                display: flex;
-                gap: 1.5rem;
+        @media (max-width: 768px) {
+            .about-section {
+                flex-direction: column;
+                text-align: center;
             }
-
-            .mobile-menu-btn {
-                display: none;
-            }
-
-            .hero h1 {
-                font-size: 3.5rem;
-            }
-
-            .services-grid {
-                grid-template-columns: repeat(2, 1fr);
-            }
-
-            .contact-grid {
-                grid-template-columns: repeat(2, 1fr);
-            }
-
-            .footer-grid {
-                grid-template-columns: repeat(3, 1fr);
-            }
-        }
-
-        @media (min-width: 1024px) {
-            .services-grid {
-                grid-template-columns: repeat(4, 1fr);
+            .about-image img {
+                width: 80%;
             }
         }
     </style>
 </head>
 <body>
-    <nav class="navbar">
-        <div class="container">
-            <div class="nav-content">
-                <div class="nav-brand">TawheedGlobal</div>
-                <button class="mobile-menu-btn" onclick="toggleMenu()">
-                    <i class="lucide-menu"></i>
-                </button>
-                <ul class="nav-links">
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#services">Services</a></li>
-                    <li><a href="#testimonials">Testimonials</a></li>
-                    <li><a href="#partnership">Partnership</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-            </div>
-            <div class="mobile-menu" id="mobileMenu">
-                <a href="#home">Home</a>
-                <a href="#about">About</a>
-                <a href="#services">Services</a>
-                <a href="#testimonials">Testimonials</a>
-                <a href="#partnership">Partnership</a>
-                <a href="#contact">Contact</a>
-            </div>
-        </div>
-    </nav>
 
-    <section id="home" class="hero">
-        <div class="container">
-            <h1>Connecting Skilled Kenyan Workers with Opportunities in Germany</h1>
-            <p>Bridge the gap between talented Kenyan professionals and German companies seeking skilled workforce</p>
-            <div class="cta-buttons">
-                <a href="#services" class="btn btn-primary">Get Started</a>
-                <a href="#contact" class="btn btn-secondary">Contact Us</a>
-            </div>
+    <section class="about-section">
+        <div class="about-image">
+            <img src="https://via.placeholder.com/400" alt="About Image">
+        </div>
+        <div class="about-text">
+            <h1>About Us</h1>
+            <p>Welcome to our platform! We strive to connect talented chefs with people in their communities. Our mission is to bring authentic home-cooked meals to everyone while empowering local talent.</p>
+            <a href="#" class="button">Learn More</a>
         </div>
     </section>
 
-    <section id="services" class="services">
-        <div class="container">
-            <div class="section-title">
-                <h2>Our Services</h2>
-                <p>Comprehensive solutions for both workers and employers</p>
-            </div>
-            <div class="services-grid">
-                <div class="service-card">
-                    <i class="lucide-users"></i>
-                    <h3>Recruitment Services</h3>
-                    <p>Professional recruitment and placement services tailored to your needs</p>
-                </div>
-                <div class="service-card">
-                    <i class="lucide-graduation-cap"></i>
-                    <h3>Skill Assessment</h3>
-                    <p>Comprehensive evaluation of professional qualifications and expertise</p>
-                </div>
-                <div class="service-card">
-                    <i class="lucide-languages"></i>
-                    <h3>Language Training</h3>
-                    <p>Intensive German language courses for professional success</p>
-                </div>
-                <div class="service-card">
-                    <i class="lucide-globe"></i>
-                    <h3>Cultural Integration</h3>
-                    <p>Preparation for successful adaptation to German work culture</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section id="contact" class="contact">
-        <div class="container">
-            <div class="section-title">
-                <h2>Contact Us</h2>
-                <p>Get in touch with our team</p>
-            </div>
-            <div class="contact-grid">
-                <div class="contact-info">
-                    <h3>Contact Information</h3>
-                    <div class="contact-details">
-                        <p><i class="lucide-phone"></i> WhatsApp:</p>
-                        <p><a href="tel:+254725996394">+254 725 996 394</a></p>
-                        <p><a href="tel:+254717417326">+254 717 417 326</a></p>
-                        <p><i class="lucide-mail"></i> <a href="mailto:info@tawheedglobal.com">info@tawheedglobal.com</a></p>
-                    </div>
-                </div>
-                <form class="contact-form">
-                    <div class="form-group">
-                        <label for="name">Name</label>
-                        <input type="text" id="name" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="email">Email</label>
-                        <input type="email" id="email" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="message">Message</label>
-                        <textarea id="message" rows="4" required></textarea>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Send Message</button>
-                </form>
-            </div>
-        </div>
-    </section>
-
-    <footer class="footer">
-        <div class="container">
-            <div class="footer-grid">
-                <div class="footer-brand">
-                    <h3>TawheedGlobal</h3>
-                    <p>Connecting skilled Kenyan workers with opportunities in Germany</p>
-                </div>
-                <div class="footer-links">
-                    <h4>Quick Links</h4>
-                    <ul>
-                        <li><a href="#services">Services</a></li>
-                        <li><a href="#about">About Us</a></li>
-                        <li><a href="#contact">Contact</a></li>
-                    </ul>
-                </div>
-                <div class="footer-links">
-                    <h4>Connect With Us</h4>
-                    <div class="social-links">
-                        <a href="#"><i class="lucide-facebook"></i></a>
-                        <a href="#"><i class="lucide-twitter"></i></a>
-                        <a href="#"><i class="lucide-linkedin"></i></a>
-                    </div>
-                </div>
-            </div>
-            <div class="footer-bottom">
-                <p>&copy; <span id="currentYear"></span> TawheedGlobal. All rights reserved.</p>
-            </div>
-        </div>
-    </footer>
-
-    <script>
-        // Mobile menu toggle
-        function toggleMenu() {
-            const mobileMenu = document.getElementById('mobileMenu');
-            mobileMenu.classList.toggle('active');
-        }
-
-        // Set current year in footer
-        document.getElementById('currentYear').textContent = new Date().getFullYear();
-    </script>
 </body>
 </html>
