--- a/home.html
+++ b/home.html
@@ -92,7 +92,7 @@
             </button>
             <div class="nav-links" id="navLinks">
                 <a href="placement.html">Job Placements</a>
-                <a href="#about">About Us</a>
+                <a href="about.html">About Us</a>
                 <a href="studyAbroad.html">Study Abroad</a>
 
                 <div class="dropdown">
@@ -259,82 +259,7 @@
         </div>
     </div>
 
-    <section id="about" class="about-section">
-        <div class="about-container">
-            <div class="about-header">
-                <h2>Welcome to TawheedVisaAgency</h2>
-                <div class="subtitle">Your Trusted Partner in Visa Processing</div>
-            </div>
-
-            <div class="about-grid">
-                <div class="about-content">
-                    <h3>Who We Are</h3>
-                    <p>With over a decade of experience in visa processing, we've helped thousands of clients
-                        successfully obtain visas for various destinations. Our expert team understands the complexities
-                        of visa applications and works tirelessly to make your visa journey smooth and successful.</p>
-
-                    <h3>Our Commitment</h3>
-                    <p>We believe in transparent, honest, and professional service. Every application is handled with
-                        utmost care and attention to detail, ensuring the highest success rate for our clients.</p>
-
-                    <div class="stats-container">
-                        <div class="stat-item">
-                            <i class="fas fa-check-circle"></i>
-                            <h4>98%</h4>
-                            <p>Success Rate</p>
-                        </div>
-                        <div class="stat-item">
-                            <i class="fas fa-users"></i>
-                            <h4>10,000+</h4>
-                            <p>Happy Clients</p>
-                        </div>
-                        <div class="stat-item">
-                            <i class="fas fa-globe"></i>
-                            <h4>50+</h4>
-                            <p>Countries Covered</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="about-services">
-                    <div class="service-highlight">
-                        <h3>How We Make Visa Processing Easy</h3>
-                        <ul class="service-list">
-                            <li>
-                                <i class="fas fa-file-alt"></i>
-                                <div>
-                                    <h4>Document Preparation</h4>
-                                    <p>We guide you through required documentation and ensure everything meets embassy
-                                        standards.</p>
-                                </div>
-                            </li>
-                            <li>
-                                <i class="fas fa-calendar-check"></i>
-                                <div>
-                                    <h4>Application Management</h4>
-                                    <p>We handle the entire application process, from filling forms to scheduling
-                                        interviews.</p>
-                                </div>
-                            </li>
-                            <li>
-                                <i class="fas fa-comments"></i>
-                                <div>
-                                    <h4>24/7 Support</h4>
-                                    <p>Our team is always available to answer your questions and provide updates.</p>
-                                </div>
-                            </li>
-                            <li>
-                                <i class="fas fa-shield-alt"></i>
-                                <div>
-                                    <h4>Legal Compliance</h4>
-                                    <p>We ensure all applications comply with current immigration laws and regulations.
-                                    </p>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
+    
 
 
             <div class="cta-section" id="start-visa-journey">
