made the changes

--- a/mentors-connect/index.html
+++ b/mentors-connect/index.html
@@ -1,7 +1,8 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>MentorConnect - Empowering Through Mentorship</title>
+    <title>MentorConnect - Connect with Study Abroad Mentors</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
@@ -15,9 +16,9 @@
         <div class="nav-links">
           <a href="#home" class="active">Home</a>
           <a href="#about">About Us</a>
-          <a href="#programs">Programs</a>
-          <a href="#mentee-requirements">Become a Mentee</a>
-          <a href="#impact">Our Impact</a>
+          <a href="#programs">Our Mentors</a>
+          <a href="#mentee-requirements">For Students</a>
+          <a href="#impact">Success Stories</a>
           <a href="#contact">Contact</a>
         </div>
         <button class="mobile-menu">☰</button>
@@ -27,8 +28,8 @@
     <main>
       <section id="home" class="hero">
         <div class="hero-content">
-          <h1>Transforming Lives Through Mentorship</h1>
-          <p>Connecting mentors and mentees to create lasting positive change in our communities</p>
+          <h1>Connect with Mentors Who've Studied Abroad Successfully</h1>
+          <p>Our platform links you with experienced mentors who have navigated the journey to top global universities and can guide your international education path</p>
           <div class="cta-buttons">
             <button class="btn primary" onclick="location.href='https://connectv1.vercel.app/'">
                 Become a Mentor
@@ -45,19 +46,19 @@
         <h2>About Us</h2>
         <div class="about-content">
           <div class="about-text">
-            <p>MentorConnect is dedicated to empowering individuals through meaningful mentorship relationships. We believe that everyone has the potential to succeed with proper guidance and support.</p>
+            <p>MentorConnect is a platform that bridges the gap between aspiring international students and those who have successfully studied abroad. We believe that personalized guidance from someone who has walked the same path is invaluable for navigating the complex journey of international education.</p>
             <ul class="stats">
               <li>
-                <span class="number">500+</span>
+                <span class="number">250+</span>
                 <span class="label">Active Mentors</span>
               </li>
               <li>
-                <span class="number">1000+</span>
-                <span class="label">Mentees Supported</span>
+                <span class="number">800+</span>
+                <span class="label">Mentored Students</span>
               </li>
               <li>
-                <span class="number">50+</span>
-                <span class="label">Success Stories</span>
+                <span class="number">30+</span>
+                <span class="label">Countries Represented</span>
               </li>
             </ul>
           </div>
@@ -65,47 +66,47 @@
       </section>
 
       <section id="programs" class="programs">
-        <h2>Our Programs</h2>
+        <h2>Our Mentors</h2>
         <div class="program-cards">
           <div class="card">
             <div class="card-image">
-              <img src="https://images.unsplash.com/photo-1522071820081-009f0129c71c" alt="Career Mentorship" />
+              <img src="https://images.unsplash.com/photo-1522071820081-009f0129c71c" alt="USA & UK Mentors" />
             </div>
             <div class="card-content">
-              <h3>Career Mentorship</h3>
-              <p>Professional guidance for career development and growth. Our experienced mentors help you navigate your career path and achieve your professional goals.</p>
+              <h3>USA & UK Mentors</h3>
+              <p>Connect with graduates and current students from Harvard, Stanford, MIT, Oxford, Cambridge, and other prestigious institutions who can share their firsthand experiences.</p>
               <ul class="program-features">
-                <li><i class="fas fa-check"></i> One-on-one career coaching</li>
-                <li><i class="fas fa-check"></i> Resume and interview preparation</li>
-                <li><i class="fas fa-check"></i> Industry networking opportunities</li>
+                <li><i class="fas fa-check"></i> Ivy League & Russell Group mentors</li>
+                <li><i class="fas fa-check"></i> STEM, business, arts & humanities</li>
+                <li><i class="fas fa-check"></i> Scholarship recipients available</li>
               </ul>
             </div>
           </div>
           <div class="card">
             <div class="card-image">
-              <img src="https://images.unsplash.com/photo-1523240795612-9a054b0db644" alt="Academic Support" />
+              <img src="https://images.unsplash.com/photo-1523240795612-9a054b0db644" alt="European Mentors" />
             </div>
             <div class="card-content">
-              <h3>Academic Support</h3>
-              <p>Educational mentoring for students at all levels. Get guidance from experienced educators and professionals in your field of study.</p>
+              <h3>European Mentors</h3>
+              <p>Meet successful students and alumni from top European universities who understand the nuances of studying in Germany, France, Netherlands, and other EU countries.</p>
               <ul class="program-features">
-                <li><i class="fas fa-check"></i> Subject-specific tutoring</li>
-                <li><i class="fas fa-check"></i> Study skills development</li>
-                <li><i class="fas fa-check"></i> Academic planning assistance</li>
+                <li><i class="fas fa-check"></i> TU Munich, Sorbonne, TU Delft mentors</li>
+                <li><i class="fas fa-check"></i> Language learning specialists</li>
+                <li><i class="fas fa-check"></i> Free tuition experts</li>
               </ul>
             </div>
           </div>
           <div class="card">
             <div class="card-image">
-              <img src="https://images.unsplash.com/photo-1552664730-d307ca884978" alt="Leadership Development" />
+              <img src="https://images.unsplash.com/photo-1552664730-d307ca884978" alt="Asian Mentors" />
             </div>
             <div class="card-content">
-              <h3>Leadership Development</h3>
-              <p>Building tomorrow's leaders through expert guidance. Develop essential leadership skills and confidence to lead teams effectively.</p>
+              <h3>Asia & Middle East Mentors</h3>
+              <p>Connect with mentors from Tsinghua, Peking University, Middle East Technical University, and Malaysian institutions who can provide insights into these emerging education hubs.</p>
               <ul class="program-features">
-                <li><i class="fas fa-check"></i> Leadership skill workshops</li>
-                <li><i class="fas fa-check"></i> Team management training</li>
-                <li><i class="fas fa-check"></i> Strategic thinking development</li>
+                <li><i class="fas fa-check"></i> Chinese, Turkish & Malaysian universities</li>
+                <li><i class="fas fa-check"></i> Full scholarship recipients</li>
+                <li><i class="fas fa-check"></i> Cultural adaptation specialists</li>
               </ul>
             </div>
           </div>
@@ -113,84 +114,84 @@
       </section>
 
       <section id="mentee-requirements" class="mentee-section">
-        <h2>Become a Mentee</h2>
+        <h2>For Students</h2>
         
         <div class="requirements-container">
           <div class="requirements-card">
             <div class="requirements-header">
               <i class="fas fa-user-graduate"></i>
-              <h3>Job Seekers Track</h3>
+              <h3>What Our Platform Offers</h3>
             </div>
             <ul class="requirements-list">
-              <li><i class="fas fa-check-circle"></i> Job seeker, currently unemployed</li>
-              <li><i class="fas fa-check-circle"></i> Age 18 years or above</li>
-              <li><i class="fas fa-check-circle"></i> Kenyan citizen, residing in Kenya</li>
-              <li><i class="fas fa-check-circle"></i> University degree holder</li>
-              <li><i class="fas fa-check-circle"></i> Committed to professional growth</li>
+              <li><i class="fas fa-check-circle"></i> Direct 1-on-1 mentorship connections</li>
+              <li><i class="fas fa-check-circle"></i> Verified mentors from top universities</li>
+              <li><i class="fas fa-check-circle"></i> Virtual meeting scheduling system</li>
+              <li><i class="fas fa-check-circle"></i> Secure messaging and file sharing</li>
+              <li><i class="fas fa-check-circle"></i> Feedback and rating system</li>
             </ul>
           </div>
 
           <div class="requirements-card">
             <div class="requirements-header">
               <i class="fas fa-building"></i>
-              <h3>MSME Track</h3>
+              <h3>How It Works</h3>
             </div>
             <ul class="requirements-list">
-              <li><i class="fas fa-check-circle"></i> MSME owner or manager</li>
-              <li><i class="fas fa-check-circle"></i> Age 18 years or above</li>
-              <li><i class="fas fa-check-circle"></i> Kenyan citizen, residing in Kenya</li>
-              <li><i class="fas fa-check-circle"></i> University degree holder</li>
-              <li><i class="fas fa-check-circle"></i> Business operational for 1+ year with revenue</li>
+              <li><i class="fas fa-check-circle"></i> Create your student profile</li>
+              <li><i class="fas fa-check-circle"></i> Browse mentors by country/university</li>
+              <li><i class="fas fa-check-circle"></i> Request mentorship connection</li>
+              <li><i class="fas fa-check-circle"></i> Schedule video consultations</li>
+              <li><i class="fas fa-check-circle"></i> Get personalized guidance and support</li>
             </ul>
           </div>
         </div>
 
         <div class="benefits-section">
-          <h2>What Our Mentees Receive</h2>
+          <h2>Why Connect With Our Mentors?</h2>
           <div class="benefits-grid">
             <div class="benefit-card">
-              <img src="https://images.unsplash.com/photo-1523240795612-9a054b0db644" alt="Expert Guidance" />
-              <h3>Expert Guidance</h3>
-              <p>Access to mentors from leading global institutions including Harvard Business School, Stanford University, and Oxford University.</p>
+              <img src="https://images.unsplash.com/photo-1523240795612-9a054b0db644" alt="Insider Knowledge" />
+              <h3>Insider Knowledge</h3>
+              <p>Gain access to firsthand experiences and insider tips that aren't available in university brochures or websites from someone who's lived the experience.</p>
             </div>
             
             <div class="benefit-card">
-              <img src="https://images.unsplash.com/photo-1522202176988-66273c2fd55f" alt="Networking" />
-              <h3>Elite Network</h3>
-              <p>Connect with professionals from top companies like Google, Microsoft, and McKinsey, expanding your professional network.</p>
+              <img src="https://images.unsplash.com/photo-1522202176988-66273c2fd55f" alt="Application Strategies" />
+              <h3>Application Strategies</h3>
+              <p>Learn what worked (and what didn't) from successful applicants who gained admission to your target universities and secured scholarships.</p>
             </div>
 
             <div class="benefit-card">
-              <img src="https://images.unsplash.com/photo-1552664730-d307ca884978" alt="Skill Development" />
-              <h3>Skill Enhancement</h3>
-              <p>Tailored workshops and training sessions led by industry experts from MIT, Cambridge, and Yale.</p>
+              <img src="https://images.unsplash.com/photo-1552664730-d307ca884978" alt="Cultural Insights" />
+              <h3>Cultural Insights</h3>
+              <p>Prepare for the social and cultural aspects of studying abroad with guidance on adapting to new environments, making friends, and building networks.</p>
             </div>
 
             <div class="benefit-card">
-              <img src="https://images.unsplash.com/photo-1517245386807-bb43f82c33c4" alt="Career Growth" />
-              <h3>Career Advancement</h3>
-              <p>Proven track record of mentees securing positions at Fortune 500 companies and leading African enterprises.</p>
+              <img src="https://images.unsplash.com/photo-1517245386807-bb43f82c33c4" alt="Ongoing Support" />
+              <h3>Ongoing Support</h3>
+              <p>Establish a relationship with someone who can continue providing advice throughout your application journey and first year studying abroad.</p>
             </div>
           </div>
 
           <div class="mentor-highlights">
-            <h3>Our Distinguished Mentors Include</h3>
+            <h3>Our Mentors Come From These Prestigious Universities</h3>
             <div class="mentor-logos">
               <div class="university-logo">
                 <img src="https://logo.clearbit.com/harvard.edu" alt="Harvard University" />
-                <span>Harvard University</span>
-              </div>
-              <div class="university-logo">
-                <img src="https://logo.clearbit.com/stanford.edu" alt="Stanford University" />
-                <span>Stanford University</span>
+                <span>Harvard</span>
               </div>
               <div class="university-logo">
                 <img src="https://logo.clearbit.com/ox.ac.uk" alt="Oxford University" />
-                <span>Oxford University</span>
+                <span>Oxford</span>
               </div>
               <div class="university-logo">
-                <img src="https://logo.clearbit.com/mit.edu" alt="MIT" />
-                <span>MIT</span>
+                <img src="https://logo.clearbit.com/tu-berlin.de" alt="TU Berlin" />
+                <span>TU Berlin</span>
+              </div>
+              <div class="university-logo">
+                <img src="https://logo.clearbit.com/tsinghua.edu.cn" alt="Tsinghua University" />
+                <span>Tsinghua</span>
               </div>
             </div>
           </div>
@@ -198,17 +199,17 @@
       </section>
 
       <section id="impact" class="impact">
-        <h2>Our Impact</h2>
+        <h2>Success Stories</h2>
         <div class="impact-stories">
           <div class="story">
             <img src="https://images.unsplash.com/photo-1573497019940-1c28c88b4f3e" alt="Success Story 1" />
-            <h3>Sarah's Journey</h3>
-            <p>"The mentorship program changed my life. I found my dream career and gained confidence."</p>
+            <h3>Amina's Mentorship Journey</h3>
+            <p>"My mentor from Stanford guided me through every aspect of my application. Their insights on crafting my personal statement and preparing for interviews were invaluable. Now I'm studying at Stanford too!"</p>
           </div>
           <div class="story">
             <img src="https://images.unsplash.com/photo-1560250097-0b93528c311a" alt="Success Story 2" />
-            <h3>John's Success</h3>
-            <p>"My mentor helped me start my own business. Now I'm helping others achieve their dreams."</p>
+            <h3>David's TU Berlin Success</h3>
+            <p>"Without my mentor who studied Engineering at TU Berlin, I would never have understood the German university application system or known how to secure housing. Their guidance made my dream possible."</p>
           </div>
         </div>
       </section>
@@ -239,13 +240,13 @@
             <input type="text" name="name" placeholder="Your Name" required />
             <input type="email" name="email" placeholder="Your Email" required />
             <select name="program">
-              <option value="">Select Program</option>
-              <option value="career">Career Mentorship</option>
-              <option value="academic">Academic Support</option>
-              <option value="leadership">Leadership Development</option>
+              <option value="">Preferred University Region</option>
+              <option value="usa-uk">USA & UK</option>
+              <option value="europe">Europe</option>
+              <option value="asia">Asia & Middle East</option>
             </select>
             <textarea name="message" placeholder="Your Message" required></textarea>
-            <button type="submit" class="btn primary">Send Message</button>
+            <button type="submit" class="btn primary">Connect with a Mentor</button>
           </form>
         </div>
       </section>
@@ -255,13 +256,13 @@
       <div class="footer-content">
         <div class="footer-section">
           <h4>MentorConnect</h4>
-          <p>Empowering individuals through mentorship</p>
+          <p>Bridging students with successful mentors</p>
         </div>
         <div class="footer-section">
           <h4>Quick Links</h4>
           <a href="#about">About Us</a>
-          <a href="#programs">Programs</a>
-          <a href="#impact">Impact</a>
+          <a href="#programs">Our Mentors</a>
+          <a href="#impact">Success Stories</a>
         </div>
         <div class="footer-section">
           <h4>Contact</h4>
